Add Cypress configuration, implement 404 page, and optimize SVG assets

--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@cypress/react": "^9.0.0",
+    "@cypress/webpack-dev-server": "^4.0.1",
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "cypress": "^14.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
